--- a/CodeWheelApp/Properties/Resources.resx
+++ b/CodeWheelApp/Properties/Resources.resx
@@ -226,4 +226,7 @@
   <data name="OUTER_VICIOUSLY" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\OUTER_VICIOUSLY.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="scroll" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\scroll.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
